Cleanup resources held by Iceberg that accumulate JVM resources (#9440)
Iceberg creates some thread pools, and Hadoop creates a thread. Those resources are kept "forever", yet another source for OOMs due to class-leaks.